--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <script src="script.js"></script>
-    <input type="text">Type your name here</input>
+    <input type="text" id="name">Type your name here</input>
     <button onclick="urName()">Display name</button>
   </body>
 </html>
