--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <script src="script.js"></script>
     <input type="text" id="name">Type your name here</input>
-    <button onclick="urName()">Display name</button>
+    <button onclick="addName()">Display name</button>
   </body>
 </html>
