--- a/two[1].html
+++ b/two[1].html
@@ -9,5 +9,6 @@
   <body>
     <script src="script.js"></script>
     <button onclick="getUser()"> </button>
+    <p id="placeholder"></p>
   </body>
 </html>
