--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <script src="script.js"></script>
-    <input type="text" id="name">Type your name here</input>
+    <input type="text" id="username">Type your name here</input>
     <button onclick="getName()">Display name</button>
   </body>
 </html>
