--- a/two[1].html
+++ b/two[1].html
@@ -7,8 +7,10 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <script>
+      getUser()
+    </script>
     <script src="script.js"></script>
-    <button onclick="getUser()"> </button>
     <p id="placeholder"></p>
   </body>
 </html>
