--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <input type="text" id="username">Type your name here</input>
-    <button onclick="getName()">Display name</button>
+    <button onclick="getName">Display name</button>
   </body>
 </html>
