--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="script[1].js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <input type="text" id="username">Type your name here</input>
-    <button onclick="getName">Display name</button>
+    <script src="app.js"></script>
+    <input type="text" id="textfield">
+    <button onclick="saveName()">Next</button>
   </body>
 </html>
