--- a/two[1].html
+++ b/two[1].html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="script[1].js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <p id="placeholder"></p>
+    <script src="app.js"></script>
+    <!--create a script that makes the window loading a function-->
     <script>
-      getUser()
+      window.onload = function() {
+        var name = localStorage.getItem('username');
+        window.alert('Hello ' + name);
+      }
     </script>
   </body>
 </html>
